# paradox

./: .gitignore  main.py  pyproject.toml
assets/apparitions/: apparitions.json  player.json
assets/sprites/: sprites.json
assets/universes/: paradox.json  universes.json
libs/atelier/: pyproject.toml
libs/atelier/atelier/: __init__.py  atelier.py  errors.py  palette.py  portrayer.py
libs/atelier/tests/: test_portrayer.py
libs/postoffice/: pyproject.toml
libs/postoffice/postoffice/: __init__.py  errors.py  post.py  postbus.py  postman.py  postoffice.py
libs/postoffice/tests/: conftest.py  test_postbus.py  test_postman.py  test_postoffice.py
paradox/: container.py  engine.py  settings.py
paradox/application/: __init__.py  atelier.py  film_director.py  filmmaker.py  gamepad.py  portraying_methods.py  postoffice.py  scenes.py  ui_manager.py  universe_simulator.py
paradox/application/scenes/: __init__.py  endpoint.py  intro.py  playing.py  setting.py
paradox/applications/: __init__.py  atelier.py  delivery_protocols.py  postoffice.py  rendering_methods.py
paradox/domain/: __init__.py  action.py  actions.py  apparition.py  base.py  camera.py  constants.py  enums.py  errors.py  palettes.py  posts.py  scene_no.py  sprite.py  stuntman.py  universe.py  world.py
paradox/domain/apparition/: __init__.py  asset.py  base.py  character.py
paradox/domain/posts/: __init__.py  (+4 more)
paradox/infrastructure/: __init__.py  sprite_repository.py  universe.py  universe_repository.py
paradox/interface/: __init__.py  container.py  delivery_protocols.py  engine.py  gamepad.py  portraying_methods.py  settings.py
tests/application/: conftest.py  test_ui_manager.py
tests/domain/: test_uis.py
(+10 files in other folders)
