[tool.poe.executor]
type = "simple"

[tool.poe.tasks]
_black-check = "black --check ."
_isort-check = "isort --check-only ."
format-check = ["_black-check", "_isort-check"]

_black = "black ."
_isort = "isort ."
format = ["_black", "_isort"]

_pylint = "pylint paradox tests"
lint = ["_pylint"]

coverage = "pytest --cov=paradox"
coverage-report = "pytest --cov=paradox --cov-report=xml"

unittest = "pytest -vv -x tests"
typetest = "mypy paradox tests"

test = ["coverage", "typetest", "lint", "format-check"]

[tool.black]

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ""

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
[tool.coverage.report]
fail_under = 90
show_missing = true
[tool.coverage.xml]
output = "coverage-reports/coverage.xml"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
incremental = false
[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.poetry]
name = "paradox"
version = "0.1.0"
description = ""
authors = ["misut <pkr5207@gmail.com>"]

[tool.poetry.dependencies]
atelier = {path = "libs/atelier", develop = true}
dependency-injector = "^4.37.0"
postoffice = {path = "libs/postoffice", develop = true}
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
pygame = "^2.1.2"
python = "^3.10"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
coverage = "^6.0.2"
isort = "^5.9.3"
mypy = "^0.910"
poethepoet = "^0.10.0"
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
